--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </tr>
   </tr>
 </table>
-  <h3><a href="./ContactMe.html">Contact Me</a></h3>
+  <h3><a href="./Contact.html">Contact Me</a></h3>
 </body>
 
 </html>
