--- a/Hobbies.html
+++ b/Hobbies.html
@@ -5,11 +5,11 @@
     <title>My Hobbies</title>
   </head>
   <body>
-    <h3>My Hobbies</h3>
+    <h1>My Hobbies</h1>
     <ol>
-    <li>Making <a href="https://www.tiktok.com/@omidvalipoor/video/7020728590123666693?is_from_webapp=1&sender_device=pc&web_id7022046388240860677">Music</a></li>
-    <li>Hanging out with friends</li>
-    <li>Photography</li>
-    </ol>  
+     <li><h3><a href="https://www.tiktok.com/@omidvalipoor/video/7020728590123666693?is_from_webapp=1&sender_device=pc&web_id7022046388240860677">Music</a></h3></li>
+    <li><h3>Hanging out with friends</h3></li>
+    <li><h3>Photography</h3></li>
+  </ol>
   </body>
 </html>
