--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
         <h1>Omid Valipoor</h1>
         <p><em><strong>Musician & Electrician & Financial advisor</strong></em></p>
         <p> Its 4 year that i live in Netherland.
-          its <a href="https://google.com">nice</a> country at and
-          i work in Horeca at the moment ,
-          because those who are in the charge
-          doesn't wanna hire an useless guy like me
-          Interesting story:D </p>
+          its <a href="https://nl.wikipedia.org/wiki/Nederland">nice</a> country at all and
+          i work very hard to find make a future for myself and i feel that im more than experienced guy in this age,only thing which is unacceptable for me is why my job applications get rejected one by one 😂😂😂. </p>
       </td>
     </tr>
   </table>
